Finishing up the final portion of version 2 of the API.
An item object is now of the form:
    {
        'id': <object id string>,
        'item': <item name string>,
        'isMarked': <isMarked boolean>,
        'isDeleted': <isDeleted boolean>,
        'timestamp': <Unix timestamp>,
        'version': <version integer>
    }

The most significant change is with the 'id' member: it is now a string
instead of an integer to allow for clients to use guaranteed-unique
item object ID's.
The second modification to the Item object is the addition of the
'version' member. When Items are POSTed to the server, existing item
objects will be compared by the version number instead of the item's
timestamp.

--- a/README
+++ b/README
@@ -15,10 +15,12 @@ Method: GET
             'timestamp': <unix timestamp>,
             'items': [
                 {
-                    'item': <item name>,
+                    'id': <object id string>,
+                    'item': <item name string>,
                     'isMarked': <isMarked boolean>,
                     'isDeleted': <isDeleted boolean>,
-                    'timestamp': <Unix timestamp>
+                    'timestamp': <Unix timestamp>,
+                    'version': <version integer>
                 },
                 {
                     ...
@@ -31,13 +33,11 @@ Method: GET
 
         Where <unix timestamp> is in epoch time marked at the moment the response is sent.
 
-
-
 Method: POST
     /syncItems
-        Given a payload of a Unix timestamp and array of items, the server adds new items to the database,
-        and updates existing items if the payload item is 'newer'; 'newer' meaning it has a timestamp greater
-        than that of the server's existing item.
+        Given a payload of a Unix timestamp and array of item objects, the server adds new items to the database,
+        and updates existing items if the payload item object is 'newer'; 'newer' meaning it has a version number greater
+        or equal to that of the server's existing item.
         
         The payload should be of the form:
 
@@ -45,10 +45,12 @@ Method: POST
             'timestamp': <unix timestamp>,
             'items': [
                 {
-                    'item': <item name>,
+                    'id': <object id string>,
+                    'item': <item name string>,
                     'isMarked': <isMarked boolean>,
                     'isDeleted': <isDeleted boolean>,
-                    'timestamp': <Unix timestamp>
+                    'timestamp': <Unix timestamp>,
+                    'version': <version integer>
                 },
                 {
                     ...
